manifests/seraphim/prod/forgejo/Deployment-anubis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: soul-weigher
    app.kubernetes.io/instance: anubis-forgejo
    app.kubernetes.io/name: anubis
    app.kubernetes.io/part-of: forgejo
    app.kubernetes.io/version: v1.25.0
  name: anubis
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: anubis-forgejo
      app.kubernetes.io/name: anubis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: soul-weigher
        app.kubernetes.io/instance: anubis-forgejo
        app.kubernetes.io/name: anubis
        app.kubernetes.io/part-of: forgejo
        app.kubernetes.io/version: v1.25.0
    spec:
      containers:
        - env:
            - name: BIND
              value: :8080
            - name: DIFFICULTY
              value: "4"
            - name: ED25519_PRIVATE_KEY_HEX
              valueFrom:
                secretKeyRef:
                  key: key
                  name: anubis
            - name: METRICS_BIND
              value: :9090
            - name: OG_EXPIRY_TIME
              value: 24h
            - name: OG_PASSTHROUGH
              value: "true"
            - name: SERVE_ROBOTS_TXT
              value: "true"
            - name: TARGET
              value: http://forgejo-http:3000
          image: ghcr.io/techarohq/anubis:v1.25.0
          name: anubis
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
