manifests/seraphim/prod/forgejo/Service-anubis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: soul-weigher
    app.kubernetes.io/instance: anubis-forgejo
    app.kubernetes.io/name: anubis
    app.kubernetes.io/part-of: forgejo
    app.kubernetes.io/version: v1.25.0
  name: anubis
  namespace: forgejo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: anubis
