manifests/seraphim/prod/forgejo/TCPRoute-forgejo-ssh.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: cloud-vegapunk-dev-ssh
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: forgejo-ssh
          port: 22
